fixed disaggregation with new source filters