@@ -78,7 +78,7 @@ public class InterEventTimeDistPlotter {
 
 					@Override
 					public int compare(ETAS_EqkRupture o1, ETAS_EqkRupture o2) {
-						return new Long(o1.getOriginTime()).compareTo(o2.getOriginTime());
+						return Long.valueOf(o1.getOriginTime()).compareTo(o2.getOriginTime());
 					}
 				};
 				etasCatalogsPoisson = Lists.newArrayList();
